Fix z-index bug

--- a/static/css/components/post.css
+++ b/static/css/components/post.css
@@ -216,7 +216,7 @@
   right: 0;
   overflow: hidden;
   padding: 0 2px;
-  z-index: 10;
+  z-index: 2;
 }
 
 .post-inner.is-unboxed .post-option {
